# CMake_QT_07_Skinnable

Solution01_Style static with Singleton/src/: CMakeLists.txt  SingletonTypeExample.h  main.cpp  main.qml  main.qrc  style.qml
Solution02_Style dynamic qml object creation/src/: AbstractStyle.qml  CMakeLists.txt  StyleA.qml  StyleB.qml  main.cpp  main.qml  main.qrc
Solution02_Style dynamic qml object creation/src/styles/: Style.qml
Solution03_Engine Reload/src/: CMakeLists.txt  EngineReloader.cpp  EngineReloader.h  EngineReloaderWrapper.cpp  EngineReloaderWrapper.h  Settings.h  main.cpp  main.qml
Solution04_QuickView Reload/src/: CMakeLists.txt  EngineReloader.cpp  EngineReloader.h  QuickViewReloader.cpp  QuickViewReloader.h  QuickViewReloaderWrapper.cpp  QuickViewReloaderWrapper.h  main.cpp  main.qml  main.qrc  qtquickcontrols2.conf
Solution05_Components Styling/src/: CMakeLists.txt  Settings.h  main.cpp  main.qml  main.qrc
Solution05_Components Styling/src/styles/: componentCreation.js  skin.ini
Solution05_Components Styling/src/styles/skin1/: Style.qml
Solution05_Components Styling/src/styles/skin2/: Style.qml
